--- a/addnewcontact.html
+++ b/addnewcontact.html
@@ -1,135 +1,249 @@
 <html>
-  <head>
-<title>Add New Contact </title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  </head>
 
-    <body>
-<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-<script src='test.js'></script>
+<head>
+    <title>Add New Contact </title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src='test.js'></script>
+</head>
 
-<div class="text-center">
-    <h1>ADD NEW CONTACT </h1>
-</div>
-<hr>
-<form action="http://localhost/contactlist/insert.php" method="post">
-<div class="container">
-    <div class="row clearfix">
-        <div class="col-md-12 column">
-            <table class="table table-bordered table-hover">
-                <tbody>
-                    <thead>
-                        <tr>Full Name:</tr>
-                    </thead>
-                    <tr>
-                        <br />
-                        <td>
-                            <input type="text" name='Fname' placeholder='Enter First name' class="form-control" />
-                        </td>
-                        <td>
-                            <input type="text" name='Mname' placeholder='Enter Middle Name' class="form-control" />
-                        </td>
-                        <td>
-                            <input type="text" name='Lname' placeholder='Enter Last Name' class="form-control" />
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-            <br />
-            <br />
-            <table class="table" id="tab_logic">
-                <tbody>
-                    <thead> Address:</thead>
-                    <tr id='addr'>
-                    <tr>
-                        <br />
-                        <br />
-                        <label for=add_type>Address Type</label>
-                        <select id="add_type" name="add_type">
-                            <option value="Home">Home</option>
-                            <option value="Work">Work</option>
-                        </select>
-                        <td>
-                            <input type="text" name='address' placeholder='Enter Address' />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <input type="text" name='city' placeholder='Enter City' class="form-control" />
-                        </td>
-                        <td>
-                            <input type="text" name='state' placeholder='Enter State' class="form-control" />
-                        </td>
-                        <td>
-                            <input type="text" name='zip' placeholder='Enter Zipcode' class="form-control" />
-                        </td>
-                    </tr>
-                    </tr>
+<body>
 
-                </tbody>
-            </table>
-            <button id="add_row" class="btn btn-primary btn-lg pull-left">Add Address</button>
-            <button id="del_row" class="btn btn-primary btn-lg pull-left">Delete Address</button>
-            <br />
-            <br />
-            <table class="table" id='tab_logic1'>
-                <tbody>
-                    <thead> Phone:</thead>
-                    <tr id='phnaddr'>
-                    <tr>
-                        <br />
-                        <br />
-                        <label for=add_type>Phone Type</label>
-                        <select id="add_type" name="add_type">
-                            <option value="Home">Home</option>
-                            <option value="Work">Work</option>
-                            <option value="Work">Cell</option>
-                        </select>
-                        <td>
-                            <input type="text" name='phone' placeholder='Enter Phone Number' />
-                        </td>
-                    </tr>
 
-                </tbody>
-            </table>
-            <button id="addphone_row" class="btn btn-primary btn-lg pull-left">Add Phone</button>
-            <button id="delphone_row" class="btn btn-primary btn-lg pull-left">Delete Phone</button>
-            <br />
-            <br />
-            <table class="table" id='tab_logic2'>
-                <tbody>
-                    <thead> Date:</thead>
-                    <tr id='dateaddr'>
-                    <tr>
-                        <br />
-                        <br />
-                        <label for=add_type>Date Type</label>
-                        <select id="add_type" name="add_type">
-                            <option value="birth">Birth</option>
-
-                        </select>
-                    </tr>
-
-                    <tr>
-                        <td>
-                            <input type="date" name='dt' placeholder='Date' class="form-control" />
-                        </td>
-                    </tr>
-
-                </tbody>
-            </table>
-            <button id="adddate_row" class="btn btn-primary btn-lg pull-left">Add Date</button>
-            <button id="deldate_row" class="btn btn-primary btn-lg pull-left">Delete Date</button>
-        </div>
+    <div class="text-center">
+        <h1>ADD NEW CONTACT </h1>
     </div>
+    <hr>
+    <form action="insert.php" method="post">
+        <div class="container">
+            <div class="row clearfix">
+                <div class="col-md-12 column">
+                    <label>FULL NAME:</label>
+                    <table class="table ">
 
-</div>
-<br />
-<br />
-<br />
-<input type="submit" value="SAVE CONTACT TO DATABASE">
-</form>
-<!-- <button id="save" type="submit" class="btn btn-primary btn-lg pull-left">Save</button> -->
+                        <tbody>
+                            <thead>
+                            </thead>
+                            <tr>
+                                <td>
+                                    <input type="text" name='Fname' placeholder='Enter First name' class="form-control" />
+                                </td>
+                                <td>
+                                    <input type="text" name='Mname' placeholder='Enter Middle Name' class="form-control" />
+                                </td>
+                                <td>
+                                    <input type="text" name='Lname' placeholder='Enter Last Name' class="form-control" />
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <br />
+                    <br />
+                </div>
+                <div class="col-md-12 column">
+
+                    <div id="address" style="display: none">
+                        <label>ADDRESS:</label>
+                        <table class="table ">
+                            <tbody>
+
+                                <tr>
+                                    <td>
+
+                                        Address Type:
+                                        <select id="add_type" name="add_type">
+                                            <option value="Home">Home</option>
+                                            <option value="Work">Work</option>
+                                            <option value="newaddrtype">Add new type</option>
+                                        </select>
+                                    </td>
+                                    <td></td>
+
+
+                                    <button type="button" id="deladdr_row" class="btn pull-right">Delete</button>
+                                </tr>
+
+                                <tr>
+                                    <td>
+                                        <input type="text" name='address' placeholder='Enter Address' class="form-control" />
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <input type="text" name='city' placeholder='Enter City' class="form-control" />
+                                    </td>
+
+                                    <td>
+                                        <select name='state' class="form-control">
+                                            <option>Choose State</option>
+                                            <option value="AL">Alabama</option>
+                                            <option value="AK">Alaska</option>
+                                            <option value="AZ">Arizona</option>
+                                            <option value="AR">Arkansas</option>
+                                            <option value="CA">California</option>
+                                            <option value="CO">Colorado</option>
+                                            <option value="CT">Connecticut</option>
+                                            <option value="DE">Delaware</option>
+                                            <option value="DC">District Of Columbia</option>
+                                            <option value="FL">Florida</option>
+                                            <option value="GA">Georgia</option>
+                                            <option value="HI">Hawaii</option>
+                                            <option value="ID">Idaho</option>
+                                            <option value="IL">Illinois</option>
+                                            <option value="IN">Indiana</option>
+                                            <option value="IA">Iowa</option>
+                                            <option value="KS">Kansas</option>
+                                            <option value="KY">Kentucky</option>
+                                            <option value="LA">Louisiana</option>
+                                            <option value="ME">Maine</option>
+                                            <option value="MD">Maryland</option>
+                                            <option value="MA">Massachusetts</option>
+                                            <option value="MI">Michigan</option>
+                                            <option value="MN">Minnesota</option>
+                                            <option value="MS">Mississippi</option>
+                                            <option value="MO">Missouri</option>
+                                            <option value="MT">Montana</option>
+                                            <option value="NE">Nebraska</option>
+                                            <option value="NV">Nevada</option>
+                                            <option value="NH">New Hampshire</option>
+                                            <option value="NJ">New Jersey</option>
+                                            <option value="NM">New Mexico</option>
+                                            <option value="NY">New York</option>
+                                            <option value="NC">North Carolina</option>
+                                            <option value="ND">North Dakota</option>
+                                            <option value="OH">Ohio</option>
+                                            <option value="OK">Oklahoma</option>
+                                            <option value="OR">Oregon</option>
+                                            <option value="PA">Pennsylvania</option>
+                                            <option value="RI">Rhode Island</option>
+                                            <option value="SC">South Carolina</option>
+                                            <option value="SD">South Dakota</option>
+                                            <option value="TN">Tennessee</option>
+                                            <option value="TX">Texas</option>
+                                            <option value="UT">Utah</option>
+                                            <option value="VT">Vermont</option>
+                                            <option value="VA">Virginia</option>
+                                            <option value="WA">Washington</option>
+                                            <option value="WV">West Virginia</option>
+                                            <option value="WI">Wisconsin</option>
+                                            <option value="WY">Wyoming</option>
+                                        </select>
+                                        <!-- <input type="text" name='state' placeholder='Enter State' class="form-control" /> -->
+                                    </td>
+
+                                    <td>
+                                        <input type="text" name='zip' placeholder='Enter Zipcode' class="form-control" />
+                                    </td>
+                                </tr>
+
+
+                            </tbody>
+
+
+                        </table>
+
+                    </div>
+
+                    <div id="addressclone">
+
+                    </div>
+                    <button type="button" id="addaddr_row" class="btn btn-primary btn-lg pull-left">Add Address</button>
+                </div>
+                <br />
+                <div class="col-md-12 column">
+                    <div class="col-md-4 column">
+                        <br />
+                        <br />
+                        <div id="phone" style="display:none">
+                            <table class="table">
+
+                                <label>PHONE:<label>
+                                        <tbody>
+                                            <tr>
+                                                <td>
+
+                                                    Phone Type:
+                                                    <select id="add_type" name="add_type">
+                                                        <option value="Home">Home</option>
+                                                        <option value="Work">Work</option>
+                                                        <option value="Work">Cell</option>
+                                                        <option value="newphntype">Add new type</option>
+                                                    </select>
+                                                </td>
+                                                <td></td>
+                                                <button type="button" id="delphone_row" class="btn pull-right">Delete</button>
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                    <input type="text" name='phone' placeholder='Enter Phone Number'
+                                                        class="form-control" />
+                                                </td>
+                                                <td></td>
+                                                <td></td>
+                                            </tr>
+
+                                        </tbody>
+                            </table>
+                        </div>
+
+                        <div id="phoneclone">
+
+                        </div>
+                        <button type="button" id="addphone_row" class="btn btn-primary btn-lg pull-left" class="form-control">Add
+                            Phone</button>
+                    </div>
+                </div>
+
+                <div class="col-md-12 column">
+                    <div class="col-md-4 column">
+                        <br />
+                        <br />
+                        <div id="date" style="display:none">
+                            <table class="table ">
+                                <label> Date:</label>
+                                <tbody>
+                                    <tr>
+                                        <br />
+                                        <br />
+                                        Date Type:
+                                        <select id="add_type" name="add_type">
+                                            <option value="birth">Birth</option>
+                                            <option value="adddatetype">Add new type</option>
+                                        </select>
+                                        <button type="button" id="deldate_row" class="btn pull-right">Delete</button>
+                                    </tr>
+
+                                    <tr>
+                                        <td>
+                                            <input type="date" name='dt' placeholder='Date' class="form-control" />
+                                        </td>
+                                    </tr>
+                                    <tr>
+
+                                    </tr>
+                                    <tr>
+
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div id="dateclone">
+
+                        </div>
+                        <button type="button" id="adddate_row" class="btn btn-primary btn-lg pull-left">Add Date</button>
+
+                    </div>
+                </div>
+            </div>
+            <br />
+            <br />
+            <br />
+            <input type="submit" value="SAVE CONTACT TO DATABASE">
+        </div>
+
+
+    </form>
 
 </body>
+
 </html>
