--- a/addnewcontact.html
+++ b/addnewcontact.html
@@ -50,7 +50,7 @@ $("#adddate_row").click(function () {
 
 </head>
 
-<body>
+<body style="background-color:rgb(211, 253, 253)">
     <div class="text-center">
         <h1>ADD NEW CONTACT </h1>
     </div>
@@ -145,7 +145,7 @@ $("#adddate_row").click(function () {
                         </td>
 
                         <td>
-                            <input type="text" name='zip[]' placeholder='Enter Zipcode' class="form-control" />
+                            <input type="text" name='zip[]' pattern="^[0-9]{5}" placeholder='Enter Zipcode' class="form-control" />
                         </td>
                     </tr>
 
@@ -171,7 +171,7 @@ $("#adddate_row").click(function () {
                                         <datalist id="phn_type">
                                             <option value="Home">Home</option>
                                             <option value="Work">Work</option>
-                                            <option value="Work">Cell</option>
+                                            <option value="Cell">Cell</option>
                                         </datalist>
                                     </td>
                                     <td></td>
@@ -179,9 +179,9 @@ $("#adddate_row").click(function () {
                                 </tr>
                                 <tr>
                                     <td>
-                                            <input type="text" name='areacode[]' placeholder='Enter 3-digit Area code'
+                                            <input type="text" name='areacode[]' pattern="^[0-9]{3}" placeholder='Enter 3-digit Area code'
                                             class="form-control" />
-                                        <input type="text" name='number[]' placeholder='Enter 7-digit Number'
+                                        <input type="text" name='number[]' pattern="^[0-9]{10}" placeholder='Enter 10-digit Phone Number'
                                             class="form-control" />
                                     </td>
                                     <td></td>
@@ -222,7 +222,7 @@ $("#adddate_row").click(function () {
                     </table>
                 </div>
 
-    <form action="insert.php" method="post">
+    <form action="insert.php" method="post" data-toggle="validator" role="form" id="form">
         <div class="container">
             <div class="row clearfix">
                 <div class="col-md-12 column">
@@ -234,13 +234,13 @@ $("#adddate_row").click(function () {
                             </thead>
                             <tr>
                                 <td>
-                                    <input type="text" name='Fname' placeholder='Enter First name' class="form-control" />
+                                   <input type="text" name='Fname' placeholder='Enter First name' class="form-control" required/>
                                 </td>
                                 <td>
                                     <input type="text" name='Mname' placeholder='Enter Middle Name' class="form-control" />
                                 </td>
                                 <td>
-                                    <input type="text" name='Lname' placeholder='Enter Last Name' class="form-control" />
+                                    <input type="text" name='Lname' placeholder='Enter Last Name' class="form-control" required/>
                                 </td>
                             </tr>
                         </tbody>
@@ -288,8 +288,18 @@ $("#adddate_row").click(function () {
             <br />
             <br />
             <br />
-            <input type="submit" value="SAVE CONTACT TO DATABASE">
+            <input type="submit" class="btn btn-lg btn-primary" value="SAVE CONTACT TO DATABASE">
+            <a href="main.html"><button type="button" class="btn btn-lg btn-primary">BACK</button></a>
         </div>
+        <script>
+        $('#form').validator().on('submit', function (e) {
+            if (e.isDefaultPrevented()) {
+                 // handle the invalid form...
+            } else {
+             // everything looks good!
+            }
+})
+        </script>
 
 
     </form>
