--- a/main.html
+++ b/main.html
@@ -55,13 +55,12 @@
           <td>
             <input type="text" name="search" placeholder="Search Contact" style="font-size:25px; font-style: italic" class="form-control control">
           </td>
-          <td><input type="submit" value="Search"class="control1" style="font-size:20px;"></td>
-          <td> <button id="addnewcontact" type="submit" class="btn btn-primary control2"><span style="font-size:20px;"> + ADD NEW</span></button></td>
+          <td><input type="submit" value="Search"class="control1" style="font-size:20px;" onsubmit="window.close()"></td>
+          <td> <button id="addnewcontact" type="button" class="btn btn-primary control2" onclick="window.close()"><span style="font-size:20px;"> + ADD NEW</span></button></td>
         </tr>
       </table>
 
     </form>
-
   </div>
 
 
